2009-12-08  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/devel/try.c: Test mpn_addlsh2_n and mpn_{add,sub}lsh_n;
	mpn_rsblsh_n now tests all shift values.
	* tests/refmpn.c (refmpn_addlsh_n, refmpn_sublsh_n): New functions.
	(refmpn_addlsh1_n): Use generic refmpn_addlsh_n.
	(refmpn_sublsh1_n): Use generic refmpn_sublsh_n.
	(refmpn_addlsh2_n): New function.
	* tests/tests.h: Declare new functions.

2009-12-06  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (tune_mulmod_bnm1): Up min_size to 12.

	* Globally: Rename *mullow* to *mullo*, *MULLOW* to *MULLO*.

	* configure.in: Don't include ev5 directory for ev6* and ev7.  Misc
	alpha path cleanups.
	* mpn/alpha/add_n.asm: Replaced by mpn/alpha/ev5/add_n.asm.
	* mpn/alpha/sub_n.asm: Replaced by mpn/alpha/ev5/sub_n.asm.
	* mpn/alpha/lshift.asm: Replaced by mpn/alpha/ev5/lshift.asm.
	* mpn/alpha/rshift.asm: Replaced by mpn/alpha/ev5/rshift.asm.
	* mpn/alpha/com_n.asm: New, moved from mpn/alpha/ev5/rshift.asm.
	* mpn/alpha/ev5/diveby3.asm: New, moved from mpn/alpha/diveby3.asm.

	* mpn/powerpc64/mode64/diveby3.asm: Remove, it is slower than
	mpn_bdiv_dbm1c on all hardware.

	* mpn/generic/powm_sec.c: Rework logic for mpn_sqr_basecase size limit.

	* gmp-impl.h (mpn_redc_1_sec): Declare.
	* configure.in (gmp_mpn_functions): Add redc_1_sec.

2009-12-06  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/devel/try.c(try_one): DATA_SRC0_HIGHBIT sets the high bit.

2009-12-05  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom_eval_dgr3_pm1.c: Change return value: 0 or ~0.
	* mpn/generic/toom_eval_dgr3_pm2.c: Likewise.
	* mpn/generic/toom_eval_pm1.c: Likewise.
	* mpn/generic/toom_eval_pm2exp.c: Likewise.
	* mpn/generic/toom_eval_pm2.c: Rewrite to use mpn_addlsh2_n.

	* mpn/generic/toom_interpolate_5pts.c: Param sa is a flag, not a sign.

	* mpn/generic/toom33_mul.c: Adapt to changes above.
	* mpn/generic/toom3_sqr.c: Likewise.
	* mpn/generic/toom42_mul.c: Likewise.